--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,6 +5,7 @@
 /*Define como va a estar compuesto el cuerpo*/
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #f1f1f1;
 }
 table {
     border-collapse: collapse;
@@ -20,6 +21,9 @@ th{
     background-color: #f44336;
     color: white;
 }
+.img-producto{
+  width: 150px; height: 140px;
+}
 /* Estilos de header */
 .header {
     background-color: #f1f1f1;
@@ -28,6 +32,11 @@ th{
     font-size: 20px;
 }
 /*Estilos del boton*/
+.h1-titulo {
+    text-align: center;
+    text-transform: uppercase;
+    color: #f44336;
+}
 button {
     background-color: #f44336;
     border: none;
@@ -109,7 +118,14 @@ button {
   solid #ccc;
   width:70%
 }
-
+.input-cantidad{
+  padding:10px;
+  display:block;
+  border:none;
+  border-bottom:1px
+  solid #ccc;
+  width:47%
+}
 /* Responsive  hace que las tres columnas se apilen una encima de otra en lugar de una al lado de la otra
 @media (max-width: 600px) {
     .column.side, .column.middle {
